# roboy3_models

./: CMakeLists.txt  README.md  package.xml
arm_right_testbed/: cardsflow.xml  logfile.txt  model.config  model.sdf
head_testbed/: cardsflow.xml  logfile.txt  model.sdf
neck_magentic_field/: cardsflow.xml
right_arm/: cardsflow.xml  logfile.txt  model.sdf  model.urdf
roboy_ciie/: cardsflow.xml  logfile.txt  model.sdf  model.urdf
roboy_ciie/meshes/CAD/: arm_left_upper.stl  elbow_core_right.stl  hand_right.stl
upper_body/: brain_model.urdf  bullet.urdf  cardsflow.xml  joint_limits.yaml  logfile.txt  model.sdf  model.urdf
upper_body/config/: .roboy3_brain.yaml.swp  control_parameters.yaml  controller.yaml  endeffectors.yaml  link_joint_relation.yaml  motor_config.yaml
upper_body/hand/model/: cable_collision_mesh.prefab  forearm_collision_plus.prefab
upper_body/meshes/CAD/: elbow_left.prefab  elbow_left_0.asset  elbow_right.prefab  elbow_right_0.asset  hand_left.prefab  hand_left_0.asset  hand_left_1.asset  hand_left_2.asset  hand_right.prefab  hand_right_0.asset  hand_right_1.asset  hand_right_2.asset  head.prefab  head_0.asset  head_1.asset  head_2.asset  head_3.asset  head_4.asset  head_5.asset  head_link1.prefab  head_link1_0.asset  head_link2.prefab  head_link2_0.asset  lowerarm_left.prefab  lowerarm_left_0.asset  lowerarm_left_1.asset  lowerarm_right.prefab  lowerarm_right_0.asset  lowerarm_right_1.asset  lowerarm_right_2.asset  neck_link1.stl  neck_link2.stl  (+53 more)
wrist_testbed/: cardsflow.xml  logfile.txt  model.config  model.sdf
(+180 files in other folders)
