<?xml version="1.0"?>
<package>
    <name>robots</name>
    <version>0.0.0</version>
    <description>roboy3 robots</description>
    <maintainer email="st@gi.ai">Simon Trendel</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <export>
    </export>
</package>